--- a/index.html
+++ b/index.html
@@ -1,22 +1,30 @@
 <!DOCTYPE html>
 
 <html>
+
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title>MNMercan</title>
   <LINK href="styles.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
+  <img src="forkit.gif" id="octocat" alt="" />
+  <p>
+    hello github , @MNMercan
+    <p><iframe src="https://giphy.com/embed/du3J3cXyzhj75IOgvA" frameBorder="0" class="giphy-embed"
+      allowFullScreen id="frame"></iframe></p>
+    
+  </p>
 
-<img src="forkit.gif" id="octocat" alt="" />
 
-<!-- Feel free to change this text here -->
-<p>
-  hello github ,  @MNMercan
-</p>
+
+
+  <!-- Feel free to change this text here -->
+
 
 
 
 </body>
+
 </html>
