--- a/index.html
+++ b/index.html
@@ -9,13 +9,17 @@
 </head>
 
 <body>
-  <img src="forkit.gif" id="octocat" alt="" />
-  <p>
-    hello github , @MNMercan
-    <p><iframe src="https://giphy.com/embed/du3J3cXyzhj75IOgvA" frameBorder="0" class="giphy-embed"
-      allowFullScreen id="frame"></iframe></p>
-    
-  </p>
+  <div class="lcont">
+    <div class="img" id="profile">
+      <img src="img/ben.jpg" alt="">
+    </div>
+
+    <div class="menu">
+       <p class="menu-element">About Me</p>
+       <p class="menu-element">My Projects</p>
+       <p class="menu-element">Contact Me</p>
+    </div>
+  </div>
 
 </body>
 
