get help w3school

--- a/index.html
+++ b/index.html
@@ -9,17 +9,18 @@
 </head>
 
 <body>
-  <div class="lcont">
-    <div class="img" id="profile">
-      <img src="img/ben.jpg" alt="">
-    </div>
 
-    <div class="menu">
-       <p class="menu-element">About Me</p>
-       <p class="menu-element">My Projects</p>
-       <p class="menu-element">Contact Me</p>
-    </div>
-  </div>
+  <nav>
+    
+    <ul>
+      <li><a href="#home" class="active">Home</a></li>
+      <li><a href="#myProjects">My Projects</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
+
+
+
 
 </body>
 
