profil photo edit

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body id="page-top">
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">
+        <a class="navbar-brand js-scroll-trigger" id="profilfoto"href="#page-top">
             <span class="d-block d-lg-none">Numan Mercan</span>
             <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2"
                     src="assets/img/profile.jpg" alt="..." /></span>
@@ -75,6 +75,8 @@
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
                         <h3 class="mb-0">Web Development</h3>
+                        <div class="subheading mb-3">Academic Article Search Engine with Neo4J Graph Data Base</div>
+                        <p></p>
                         <div class="subheading mb-3">Car Tracking System With GPS location data.</div>
                         <p></p>
                     </div>
@@ -88,19 +90,22 @@
                         <p>Sudoku Solver for understanding Threads concept </p>
                         <div class="subheading mb-3">Race Cars</div>
                         <p>I made this game with HTML CSS and Javascript</p>
+                        <div class="subheading mb-3">Catch Me If You Can</div>
+                        <p></p>
                     </div>
                 </div>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
                         <h3 class="mb-0">Blockchain</h3>
-                        <div class="subheading mb-3">Car Tracking System With GPS location data.</div>
+                        <div class="subheading mb-3">Application of Hyperledger Blockhain to
+                            Logistic Supply Chain with IOT</div>
                         <p></p>
                     </div>
                 </div>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
                         <h3 class="mb-0">Mobile (Just 101)</h3>
-                        <div class="subheading mb-3">Car Tracking System With GPS location data.</div>
+                        <div class="subheading mb-3">User Authentication With Firebase in React Native</div>
                         <p></p>
                     </div>
                 </div>
@@ -174,12 +179,8 @@
         <section class="resume-section" id="interests">
             <div class="resume-section-content">
                 <h2 class="mb-5">Interests</h2>
-                <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid
-                    skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking,
-                    free climbing, and kayaking.</p>
-                <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television
-                    shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest
-                    technology advancements in the front-end web development world.</p>
+                <p></p>
+                <p class="mb-0"></p>
             </div>
         </section>
         <hr class="m-0" />
