--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body id="page-top">
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
-        <a class="navbar-brand js-scroll-trigger" id="profilfoto"href="#page-top">
+        <a class="navbar-brand js-scroll-trigger" id="profilfoto" href="#page-top">
             <span class="d-block d-lg-none">Numan Mercan</span>
             <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2"
                     src="assets/img/profile.jpg" alt="..." /></span>
@@ -75,38 +75,67 @@
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
                         <h3 class="mb-0">Web Development</h3>
-                        <div class="subheading mb-3">Academic Article Search Engine with Neo4J Graph Data Base</div>
-                        <p></p>
-                        <div class="subheading mb-3">Car Tracking System With GPS location data.</div>
-                        <p></p>
+                        <ul>
+                            <li class="expList">
+                                <div class="subheading mb-3">Academic Article Search Engine with Neo4J Graph Data Base
+                                </div>
+                                <p></p>
+                            </li>
+                            <li class="expList">
+                                <div class="subheading mb-3">Car Tracking System With GPS location data.</div>
+                                <p></p>
+                            </li>
+                        </ul>
+
+
                     </div>
                 </div>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
                         <h3 class="mb-0">Game Development</h3>
-                        <div class="subheading mb-3">Maze Game</div>
-                        <p>Smurfs are running from Gargamel</p>
-                        <div class="subheading mb-3">Sudoku Solver With Java Threads</div>
-                        <p>Sudoku Solver for understanding Threads concept </p>
-                        <div class="subheading mb-3">Race Cars</div>
-                        <p>I made this game with HTML CSS and Javascript</p>
-                        <div class="subheading mb-3">Catch Me If You Can</div>
-                        <p></p>
+                        <ul>
+                            <li class="expList">
+                                <div class="subheading mb-3">Maze Game</div>
+                                <p>Smurfs are running from Gargamel</p>
+                            </li>
+                            <li class="expList">
+                                <div class="subheading mb-3">Sudoku Solver With Java Threads</div>
+                                <p>Sudoku Solver for understanding Threads concept </p>
+                            </li>
+                            <li class="expList">
+                                <div class="subheading mb-3">Race Cars</div>
+                                <p>I made this game with HTML CSS and Javascript</p>
+                            </li>
+                            <li class="expList">
+                                <div class="subheading mb-3">Catch Me If You Can</div>
+                                <p></p>
+                            </li>
+                        </ul>
+
+
+
+
                     </div>
                 </div>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
                         <h3 class="mb-0">Blockchain</h3>
-                        <div class="subheading mb-3">Application of Hyperledger Blockhain to
-                            Logistic Supply Chain with IOT</div>
-                        <p></p>
+                        <ul>
+                            <li class="expList"><div class="subheading mb-3">Application of Hyperledger Blockhain to
+                                Logistic Supply Chain with IOT</div>
+                            <p></p></li>
+                        </ul>
+                        
                     </div>
                 </div>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
                         <h3 class="mb-0">Mobile (Just 101)</h3>
-                        <div class="subheading mb-3">User Authentication With Firebase in React Native</div>
-                        <p></p>
+                        <ul>
+                            <li class="expList"><div class="subheading mb-3">User Authentication With Firebase in React Native</div>
+                                <p></p></li>
+                        </ul>
+                        
                     </div>
                 </div>
             </div>
@@ -150,15 +179,15 @@
                 <h2 class="mb-5">Skills</h2>
                 <div class="subheading mb-3">Programming Languages & Tools</div>
                 <ul class="list-inline dev-icons">
-                    <li class="list-inline-item"><i class="fab fa">C</i></li>
-                    <li class="list-inline-item"><i class="fab fa-java"></i></li>
-                    <li class="list-inline-item"><i class="fab fa-html5"></i></li>
-                    <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-                    <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-                    <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
-                    <li class="list-inline-item"><i class="fab fa-npm"></i></li>
-                    <li class="list-inline-item"><i class="fab fa-git"></i></li>
-                    <li class="list-inline-item"><i class="fab fa-github"></i></li>
+                    <li class="list-inline-item"><i class="fab fa" >C</i></li>
+                    <li class="list-inline-item"><i class="fab fa-java" style="color: #4f7b99;"></i></li>
+                    <li class="list-inline-item"><i class="fab fa-html5" style="color: #e54c21;"></i></li>
+                    <li class="list-inline-item"><i class="fab fa-css3-alt" style="color: #2449d8;"></i></li>
+                    <li class="list-inline-item"><i class="fab fa-js-square" style="color: #ead41c;"></i></li>
+                    <li class="list-inline-item"><i class="fab fa-node-js" style="color: #89bb3c;"></i></li>
+                    <li class="list-inline-item"><i class="fab fa-npm" style="color: #c03535;"></i></li>
+                    <li class="list-inline-item"><i class="fab fa-git" style="color: #3a2b00;"></i></li>
+                    <li class="list-inline-item"><i class="fab fa-github" style="color: #202020;"></i></li>
 
                 </ul>
                 <div class="subheading mb-3"> Competencies</div>
