last static-simple changes

--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
                     currently working on web development. Now i’m in my last year of university and
                     I want to get some bussines experience before my graduation.</p>
                 <div class="social-icons">
-                    <a class="social-icon" id="social1" href="https://www.linkedin.com/in/mnmercan/"><i
+                    <a class="social-icon" id="social1" href="https://www.linkedin.com/in/mnmercan/" target="_blank"><i
                             class="fab fa-linkedin-in"></i></a>
-                    <a class="social-icon" id="social1" href="https://github.com/MNMercan"><i
+                    <a class="social-icon" id="social1" href="https://github.com/MNMercan" target="_blank"><i
                             class="fab fa-github"></i></a>
-                    <a class="social-icon" id="social1" href="https://twitter.com/mnumanmercan"><i
+                    <a class="social-icon" id="social1" href="https://twitter.com/mnumanmercan" target="_blank"><i
                             class="fab fa-twitter"></i></a>
                 </div>
             </div>
@@ -130,7 +130,7 @@
                 </div>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
-                        <h3 class="mb-0">Mobile (Just 101)</h3>
+                        <h3 class="mb-0">Mobile (Beginner)</h3>
                         <ul>
                             <li class="expList"><div class="subheading mb-3">User Authentication With Firebase in React Native</div>
                                 <p></p></li>
@@ -195,10 +195,6 @@
                     <li>
                         <span class="fa-li"><i class="fas fa-check"></i></span>
                         Web Development , Applications
-                    </li>
-                    <li>
-                        <span class="fa-li"><i class="fas fa-check"></i></span>
-                        Blockchain Technologies
                     </li>
                 </ul>
             </div>
