--- a/index.html
+++ b/index.html
@@ -76,9 +76,11 @@
                     <div class="flex-grow-1">
                         <h3 class="mb-0">Web Development</h3>
                         <ul>
-                            <li class="expList"> <a href=""></a>
-                                <div class="subheading mb-3">Academic Article Search Engine with Neo4J Graph Data Base
-                                </div>
+                            <li class="expList"> <a href="https://github.com/MNMercan/Neo4J" target="_blank">
+                                    <div class="subheading mb-3">Academic Article Search Engine with Neo4J Graph Data
+                                        Base
+                                    </div>
+                                </a>
                                 <p></p>
                             </li>
                             <li class="expList"> <a href=""></a>
@@ -94,20 +96,24 @@
                     <div class="flex-grow-1">
                         <h3 class="mb-0">Game Development</h3>
                         <ul>
-                            <li class="expList"> <a href=""></a>
-                                <div class="subheading mb-3">Maze Game</div>
+                            <li class="expList"><a href="https://github.com/MNMercan/2020-21-Kou-ProLab-2.-D-nem-"
+                                    target="_blank" rel="noopener noreferrer">
+                                    <div class="subheading mb-3">Maze Game</div>
+                                </a>
                                 <p>Smurfs are running from Gargamel</p>
                             </li>
                             <li class="expList"> <a href=""></a>
                                 <div class="subheading mb-3">Sudoku Solver With Java Threads</div>
                                 <p>Sudoku Solver for understanding Threads concept </p>
                             </li>
-                            <li class="expList"> <a href=""></a>
-                                <div class="subheading mb-3">Race Cars</div>
+                            <li class="expList"> <a href="https://github.com/MNMercan/HelloWorld">
+                                    <div class="subheading mb-3">Race Cars</div>
+                                </a>
                                 <p>I made this game with HTML CSS and Javascript</p>
                             </li>
-                            <li class="expList"> <a href=""></a>
-                                <div class="subheading mb-3">Catch Me If You Can</div>
+                            <li class="expList"> <a href="https://github.com/MNMercan/HelloWorld">
+                                    <div class="subheading mb-3">Catch Me If You Can</div>
+                                </a>
                                 <p></p>
                             </li>
                         </ul>
@@ -121,21 +127,30 @@
                     <div class="flex-grow-1">
                         <h3 class="mb-0">Blockchain</h3>
                         <ul>
-                            <li class="expLi<a href=""></a> a.projects<div class="subheading mb-3">Application of Hyperledger Blockhain to
-                                Logistic Supply Chain with IOT</div>
-                            <p></p></li>
+                            <li class="expList">
+                                <div class=" subheading mb-3">Application of
+                                    Hyperledger Blockhain to
+                                    Logistic Supply Chain with IOT
+                                </div>
+                                <p></p>
+                            </li>
                         </ul>
-                        
+
                     </div>
                 </div>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
                         <h3 class="mb-0">Mobile (Beginner)</h3>
                         <ul>
-                            <li class="expLi<a href=""></a> a.projects<div class="subheading mb-3">User Authentication With Firebase in React Native</div>
-                                <p></p></li>
+                            <li class="expList">
+                                <div class=" subheading mb-3">User Authentication
+                                    With
+                                    Firebase in React Native
+                                </div>
+                                <p></p>
+                            </li>
                         </ul>
-                        
+
                     </div>
                 </div>
             </div>
@@ -179,7 +194,7 @@
                 <h2 class="mb-5">Skills</h2>
                 <div class="subheading mb-3">Programming Languages & Tools</div>
                 <ul class="list-inline dev-icons">
-                    <li class="list-inline-item"><i class="fab fa" >C</i></li>
+                    <li class="list-inline-item"><i class="fab fa">C</i></li>
                     <li class="list-inline-item"><i class="fab fa-java" style="color: #4f7b99;"></i></li>
                     <li class="list-inline-item"><i class="fab fa-html5" style="color: #e54c21;"></i></li>
                     <li class="list-inline-item"><i class="fab fa-css3-alt" style="color: #2449d8;"></i></li>
