addin some another skills

--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
                     <div class="flex-grow-1">
                         <h3 class="mb-0">Web Development</h3>
                         <ul>
-                            <li class="expList"> <a class="projectLinks" href="https://github.com/MNMercan/Neo4J" target="_blank">
+                            <li class="expList"> <a class="projectLinks" href="https://github.com/MNMercan/Neo4J"
+                                    target="_blank">
                                     <div class="subheading mb-3">Academic Article Search Engine with Neo4J Graph Data
                                         Base
                                     </div>
@@ -96,14 +97,18 @@
                     <div class="flex-grow-1">
                         <h3 class="mb-0">Game Development</h3>
                         <ul>
-                            <li class="expList"><a class="projectLinks" href="https://github.com/MNMercan/2020-21-Kou-ProLab-2.-D-nem-"
-                                    target="_blank" rel="noopener noreferrer">
+                            <li class="expList"><a class="projectLinks"
+                                    href="https://github.com/MNMercan/2020-21-Kou-ProLab-2.-D-nem-" target="_blank"
+                                    rel="noopener noreferrer">
                                     <div class="subheading mb-3">Maze Game</div>
                                 </a>
                                 <p>Smurfs are running from Gargamel</p>
                             </li>
-                            <li class="expList"> <a class="projectLinks" href="https://github.com/MNMercan/2021-22-Kou-YazLab-1-2" target="_blank" rel="noopener noreferrer">
-                                <div class="subheading mb-3">Sudoku Solver With Java Threads</div></a>
+                            <li class="expList"> <a class="projectLinks"
+                                    href="https://github.com/MNMercan/2021-22-Kou-YazLab-1-2" target="_blank"
+                                    rel="noopener noreferrer">
+                                    <div class="subheading mb-3">Sudoku Solver With Java Threads</div>
+                                </a>
                                 <p>Sudoku Solver for understanding Threads concept </p>
                             </li>
                             <li class="expList"> <a class="projectLinks" href="https://github.com/MNMercan/HelloWorld">
@@ -210,6 +215,10 @@
                     <li>
                         <span class="fa-li"><i class="fas fa-check"></i></span>
                         Web Development , Applications
+                    </li>
+                    <li>
+                        <span class="fa-li"><i class="fas fa-check"></i></span>
+                        Communication Skill
                     </li>
                 </ul>
             </div>
