GPA upgrade and adding one skill

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                     <div class="flex-grow-1">
                         <h3 class="mb-0">Kocaeli University</h3>
                         <div class="subheading mb-3">Computer Engineering</div>
-                        <p>GPA: 3.2/4</p>
+                        <p>GPA: 3.1/4</p>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">2020-2023</span></div>
                 </div>
@@ -219,6 +219,10 @@
                     <li>
                         <span class="fa-li"><i class="fas fa-check"></i></span>
                         Communication Skill
+                    </li>
+                    <li>
+                        <span class="fa-li"><i class="fas fa-check"></i></span>
+                        Empathy
                     </li>
                 </ul>
             </div>
