--- a/index.html
+++ b/index.html
@@ -122,10 +122,6 @@
                                 <p></p>
                             </li>
                         </ul>
-
-
-
-
                     </div>
                 </div>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
@@ -156,6 +152,31 @@
                             </li>
                         </ul>
 
+                    </div>
+                </div>
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                    <div class="flex-grow-1">
+                        <h3 class="mb-0">Team Projects</h3>
+                        <ul>
+                            <li class="expList"><a href="">
+                                    <div class="subheading mb-3">Student Information System</div>
+                                </a>
+                            </li>
+                            <li class="expList"> <a href="">
+                                    <div class="subheading mb-3">Suffix Tree Algorithm with graphics.h lib in C</div>
+                                </a>
+                            </li>
+                            <li class="expList"> <a class="projectLinks" href="https://github.com/MNMercan/HelloWorld">
+                                    <div class="subheading mb-3">Race Cars</div>
+                                </a>
+                                <p>I made this game with HTML CSS and Javascript</p>
+                            </li>
+                            <li class="expList"> <a class="projectLinks" href="https://github.com/MNMercan/HelloWorld">
+                                    <div class="subheading mb-3">Catch Me If You Can</div>
+                                </a>
+                                <p></p>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
