another ProLab projects

--- a/index.html
+++ b/index.html
@@ -158,23 +158,17 @@
                     <div class="flex-grow-1">
                         <h3 class="mb-0">Team Projects</h3>
                         <ul>
-                            <li class="expList"><a href="">
+                            <li class="expList"><a class="projectLinks" href="https://github.com/MNMercan/ProLab1-1-">
                                     <div class="subheading mb-3">Student Information System</div>
                                 </a>
                             </li>
-                            <li class="expList"> <a href="">
+                            <li class="expList"> <a class="projectLinks" href="">
                                     <div class="subheading mb-3">Suffix Tree Algorithm with graphics.h lib in C</div>
                                 </a>
                             </li>
-                            <li class="expList"> <a class="projectLinks" href="https://github.com/MNMercan/HelloWorld">
-                                    <div class="subheading mb-3">Race Cars</div>
+                            <li class="expList"> <a class="projectLinks" href="https://github.com/MNMercan/Prolab1-3">
+                                    <div class="subheading mb-3">Air Traffic Control with Priority Queue</div>
                                 </a>
-                                <p>I made this game with HTML CSS and Javascript</p>
-                            </li>
-                            <li class="expList"> <a class="projectLinks" href="https://github.com/MNMercan/HelloWorld">
-                                    <div class="subheading mb-3">Catch Me If You Can</div>
-                                </a>
-                                <p></p>
                             </li>
                         </ul>
                     </div>
