last changes for June 19

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                                     <div class="subheading mb-3">Student Information System</div>
                                 </a>
                             </li>
-                            <li class="expList"> <a class="projectLinks" href="">
+                            <li class="expList"> <a class="projectLinks" href="https://github.com/MNMercan/Prolab-1-2">
                                     <div class="subheading mb-3">Suffix Tree Algorithm with graphics.h lib in C</div>
                                 </a>
                             </li>
