--- a/index.html
+++ b/index.html
@@ -111,12 +111,12 @@
                                 </a>
                                 <p>Sudoku Solver for understanding Threads concept </p>
                             </li>
-                            <li class="expList"> <a class="projectLinks" href="https://github.com/MNMercan/HelloWorld">
+                            <li class="expList"> <a class="projectLinks" href="https://github.com/MNMercan/HelloWorld" target="_blank">
                                     <div class="subheading mb-3">Race Cars</div>
                                 </a>
                                 <p>I made this game with HTML CSS and Javascript</p>
                             </li>
-                            <li class="expList"> <a class="projectLinks" href="https://github.com/MNMercan/HelloWorld">
+                            <li class="expList"> <a class="projectLinks" href="https://github.com/MNMercan/HelloWorld" target="_blank">
                                     <div class="subheading mb-3">Catch Me If You Can</div>
                                 </a>
                                 <p></p>
@@ -158,15 +158,15 @@
                     <div class="flex-grow-1">
                         <h3 class="mb-0">Team Projects</h3>
                         <ul>
-                            <li class="expList"><a class="projectLinks" href="https://github.com/MNMercan/ProLab1-1-">
+                            <li class="expList"><a class="projectLinks" href="https://github.com/MNMercan/ProLab1-1-" target="_blank">
                                     <div class="subheading mb-3">Student Information System</div>
                                 </a>
                             </li>
-                            <li class="expList"> <a class="projectLinks" href="https://github.com/MNMercan/Prolab-1-2">
+                            <li class="expList"> <a class="projectLinks" href="https://github.com/MNMercan/Prolab-1-2" target="_blank">
                                     <div class="subheading mb-3">Suffix Tree Algorithm with graphics.h lib in C</div>
                                 </a>
                             </li>
-                            <li class="expList"> <a class="projectLinks" href="https://github.com/MNMercan/Prolab1-3">
+                            <li class="expList"> <a class="projectLinks" href="https://github.com/MNMercan/Prolab1-3" target="_blank">
                                     <div class="subheading mb-3">Air Traffic Control with Priority Queue</div>
                                 </a>
                             </li>
@@ -185,7 +185,7 @@
                     <div class="flex-grow-1">
                         <h3 class="mb-0">Kocaeli University</h3>
                         <div class="subheading mb-3">Computer Engineering</div>
-                        <p>GPA: 3.1/4</p>
+                        <p>GPA: 3.13/4</p>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">2020-2023</span></div>
                 </div>
