--- a/index.html
+++ b/index.html
@@ -246,9 +246,25 @@
         <!-- Interests-->
         <section class="resume-section" id="interests">
             <div class="resume-section-content">
-                <h2 class="mb-5">Interests</h2>
-                <p></p>
-                <p class="mb-0"></p>
+                <h2 class="mb-5">Interests & Hobbies</h2>
+                <ul class="fa-ul mb-0">
+                    <li>
+                        <span class="fa-li"><i class="fas fa-check"></i></span>
+                        Cinema
+                    </li>
+                    <li>
+                        <span class="fa-li"><i class="fas fa-check"></i></span>
+                        Street Workout
+                    </li>
+                    <li>
+                        <span class="fa-li"><i class="fas fa-check"></i></span>
+                        Reading
+                    </li>
+                    <li>
+                        <span class="fa-li"><i class="fas fa-check"></i></span>
+                        Video Games
+                    </li>
+                </ul>
             </div>
         </section>
         <hr class="m-0" />
