--- a/index.html
+++ b/index.html
@@ -264,6 +264,10 @@
                         <span class="fa-li"><i class="fas fa-check"></i></span>
                         Video Games
                     </li>
+                    <li>
+                        <span class="fa-li"><i class="fas fa-check"></i></span>
+                        Photography (Landscape & Nature)
+                    </li>
                 </ul>
             </div>
         </section>
