--- a/index.html
+++ b/index.html
@@ -239,6 +239,10 @@
                         <span class="fa-li"><i class="fas fa-check"></i></span>
                         Empathy
                     </li>
+                    <li>
+                        <span class="fa-li"><i class="fas fa-check"></i></span>
+                        Math
+                    </li>
                 </ul>
             </div>
         </section>
