--- a/index.html
+++ b/index.html
@@ -143,11 +143,11 @@
                     <div class="flex-grow-1">
                         <h3 class="mb-0">Mobile (Beginner)</h3>
                         <ul>
-                            <li class="expList">
+                            <li class="expList"><a class="projectLinks" href="https://github.com/MNMercan/UserAuth-React-Native" target="_blank">
                                 <div class=" subheading mb-3">User Authentication
                                     With
                                     Firebase in React Native
-                                </div>
+                                </div></a>
                                 <p></p>
                             </li>
                         </ul>
