edit for my info

--- a/index.html
+++ b/index.html
@@ -54,9 +54,11 @@
                 </div>
                 <p class="lead mb-5">I’m a 4th year student of Computer Engineering at Kocaeli University. The first
                     year of my education is at Konya Technical University , 2 years at Kocaeli
-                    University. I’m interested in web,game and blockchain techonologies. I am
-                    currently working on web development. Now i’m in my last year of university and
-                    I want to get some bussines experience before my graduation.</p>
+                    University. I’m interested in web,game development and blockchain techonologies. I am
+                    currently working on web development.</p>
+                    <p class="lead mb-5">
+                        I made some web projects. You can take a look at the links below. I've never done complex game programming, but I love game development math and logic. 
+                    </p>
                 <div class="social-icons">
                     <a class="social-icon" id="social1" href="https://www.linkedin.com/in/mnmercan/" target="_blank"><i
                             class="fab fa-linkedin-in"></i></a>
