addin new infos

--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
                     University. I’m interested in web,game development and blockchain techonologies. I am
                     currently working on web development.</p>
                     <p class="lead mb-5">
-                        I made some web projects. You can take a look at the links below. I've never done complex game programming, but I love game development math and logic. 
+                        I made some web projects. You can take a look at the links below. I've never done complex game programming, but I love game development math and logic.
+                        My blockchain interest are coming from same reason. But I took part in a 5-6 month advanced project on blockchain and therefore I gained good technical and theoretical knowledge.
                     </p>
                 <div class="social-icons">
                     <a class="social-icon" id="social1" href="https://www.linkedin.com/in/mnmercan/" target="_blank"><i
