--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                     <li class="list-inline-item"><i class="fab fa-html5" style="color: #e54c21;"></i></li>
                     <li class="list-inline-item"><i class="fab fa-css3-alt" style="color: #2449d8;"></i></li>
                     <li class="list-inline-item"><i class="fab fa-js-square" style="color: #ead41c;"></i></li>
-                    <li class="list-inline-item"><i class="fab fa">C</i></li>
+                    <li class="list-inline-item"><i class="fab fa" style="color: #00417b;">C</i></li>
                     <li class="list-inline-item"><i class="fab fa-java" style="color: #4f7b99;"></i></li>
                     <li class="list-inline-item"><i class="fab fa-node-js" style="color: #89bb3c;"></i></li>
                     <li class="list-inline-item"><i class="fab fa-git" style="color: #3a2b00;"></i></li>
