--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                     </li>
                     <li>
                         <span class="fa-li"><i class="fas fa-check"></i></span>
-                        Photography (Landscape & Nature)
+                        <a class="projectLinks" href="" target="_blank">Photography (Landscape & Nature)</a> 
                     </li>
                 </ul>
             </div>
