--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <section class="resume-section" id="about">
             <div class="resume-section-content">
                 <h1 class="mb-0">
-                    Numan
+                    M. Numan
                     <span class="text-primary">MERCAN</span>
                 </h1>
                 <div class="subheading mb-5">
